feat: two user chatting

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^4.1.5"
-  },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  }
 }
