--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,14 @@ DB_PASSWORD=
 #
 JWT_SECRET=
 JWT_REFRESH_SECRET=
+
+#AWS for multer file storage
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+
+CURRENT_ENVIRONMENT=development
+
+# Token Expiry
+REFRESH_EXPIRES_IN=
+ACCESS_EXPIRES_IN=
