--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint": "^9.33.0",
     "express": "^5.1.0",
     "globals": "^16.3.0",
-    "install": "^0.13.0",
     "nodemon": "^3.1.10",
     "npm": "^10.9.3",
     "prettier": "^3.6.2",
@@ -33,7 +32,9 @@
     "typescript-eslint": "^8.40.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.888.0",
     "@types/socket.io": "^3.0.1",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -41,8 +42,9 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "multer-s3": "^2.10.0",
+    "multer-s3-v3": "^33.0.12",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "zod": "^4.1.5"
   }
 }
