--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint",
+    "test": "jest --watch",
     "lint:fix": "eslint --fix",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -15,18 +16,25 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@faker-js/faker": "^9.9.0",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "dotenv": "^17.2.1",
     "eslint": "^9.33.0",
+    "eslint-plugin-jest": "^29.0.1",
     "express": "^5.1.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "jest": "^30.1.3",
+    "lint-staged": "^16.1.6",
     "nodemon": "^3.1.10",
     "npm": "^10.9.3",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0"
